feat: Complete backend refactoring and Cloudflare deployment
- Refactor monolithic index.ts into modular routes, services, and utils
- Implement lazy-loaded database connection for Cloudflare compatibility
- Add comprehensive authentication middleware and authorization
- Configure Cloudflare Workers deployment with environment variables
- Add input sanitization and security improvements
- Implement Stripe integration with payment links and onboarding
- Add automated testing suite and production readiness checks
- Deploy to Cloudflare Workers with full API functionality

--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "migrate": "tsx migrate.js"
+    "migrate": "tsx migrate.js",
+    "test": "node ../tests/test-production-readiness.js",
+    "test:local": "TEST_BASE_URL=http://localhost:3000 node ../tests/test-production-readiness.js",
+    "test:staging": "TEST_BASE_URL=https://staging-api.example.com node ../tests/test-production-readiness.js",
+    "test:prod": "TEST_BASE_URL=https://api.production.com node ../tests/test-production-readiness.js"
   },
   "dependencies": {
     "@better-auth/expo": "^1.3.7",
