fix: Enable Better Auth routes and update for Cloudflare Workers
- Uncomment Better Auth routes for OAuth functionality
- Update auth configuration to work with Cloudflare Workers environment
- Add BETTER_AUTH_SECRET to wrangler.toml
- Fix Google OAuth 404 error

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -14,6 +14,7 @@ format = "modules"
 [vars]
 BETTER_AUTH_URL = "https://handypay-backend.handypay.workers.dev"
 DATABASE_URL = "postgresql://postgres.cmovosoqdskzdojsmndh:huxwAw-wovjuk-honzy1@aws-1-us-east-1.pooler.supabase.com:5432/postgres?pgbouncer=true&connection_limit=1"
+BETTER_AUTH_SECRET = "your-secret-key-here-change-this-in-production"
 
 # OAuth configurations (set via wrangler secrets)
 # GOOGLE_CLIENT_ID, APPLE_CLIENT_ID, etc. should be set via wrangler secrets
